--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -361,7 +361,7 @@ html {
   font-size: 18px; }
 
 body {
-  font-family: "PT Serif", sans-serif;
+  font-family: "droid-serif", sans-serif;
   font-size: 100%;
   font-weight: 300;
   line-height: 1; }
@@ -386,15 +386,20 @@ h2, .h2,
 h3, .h3,
 h4, .h4,
 h5, .h5 {
-  font-family: "droid-serif", sans-serif;
+  font-family: "pathway gothic one", arial, sans-serif;
   font-weight: 700;
   line-height: 1;
-  margin: 0 0 1rem; }
+  margin: 0 0 1rem;
+  text-transform: uppercase; }
 
 p {
   font-size: 1rem;
   line-height: 1.5rem;
   margin: 0 0 1rem; }
+
+nav {
+  font-family: 'Roboto';
+  text-transform: uppercase; }
 
 /* Structure */
 *, *:before, *:after {
@@ -417,7 +422,7 @@ a:active {
 .bar {
   background: #3c0e62 url("../img/bg-mountains.jpg") no-repeat 0 bottom;
   background-size: cover;
-  height: 20rem;
+  height: 21rem;
   position: absolute;
   top: 0;
   z-index: -1;
@@ -434,20 +439,6 @@ a:active {
     display: block;
     clear: both; }
 
-header {
-  color: #fff;
-  height: 15rem;
-  padding: 3rem 0;
-  text-transform: uppercase; }
-  header h1 {
-    font-size: 3rem;
-    font-weight: 300;
-    margin-bottom: .5rem; }
-  header h2 {
-    font-size: 1rem;
-    font-weight: 300;
-    margin-bottom: 0; }
-
 .sidebar {
   width: 100%;
   float: left;
@@ -455,11 +446,24 @@ header {
   margin-right: 0; }
   @media (min-width: 700px) {
     .sidebar {
-      width: 31.91489%;
+      width: 25%;
       float: left;
-      margin-right: 2.12766%;
-      margin-right: 0;
       padding: 0 3rem; } }
+
+header {
+  color: #fff;
+  height: 16rem;
+  padding: 3rem 0;
+  text-transform: uppercase; }
+  header h1 {
+    font-size: 3.75rem;
+    font-weight: 300;
+    margin-bottom: .5rem; }
+  header h2 {
+    font-size: 1.2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-bottom: 0; }
 
 nav {
   padding: 3rem 0; }
@@ -471,9 +475,8 @@ nav {
     nav .links li {
       color: #333;
       display: block;
-      font-family: "droid-serif", sans-serif;
-      font-size: 1.5rem;
-      line-height: 2.5rem;
+      font-size: 1.33rem;
+      line-height: 1.75rem;
       margin-bottom: 1rem;
       overflow: hidden; }
       nav .links li .circle {
@@ -481,27 +484,28 @@ nav {
         border-radius: 100%;
         color: #fff;
         float: left;
-        height: 2.5rem;
-        margin: 0 1rem 0 0;
+        font-size: 1.25rem;
+        height: 1.5rem;
+        margin: 0 .52rem 0 0;
         overflow: hidden;
         position: relative;
         text-align: center;
-        width: 2.5rem; }
+        width: 1.5rem; }
         nav .links li .circle:before {
           position: relative;
           left: 1px;
-          top: 8px; }
-      nav .links li a:hover .circle,
-      nav .links li a:active .circle {
-        background-color: #b1972c; }
+          top: 1px; }
       nav .links li a:link,
       nav .links li a:visited {
-        color: #333;
+        color: #666;
         text-decoration: none; }
       nav .links li a:hover,
       nav .links li a:active {
         color: #000;
         text-decoration: none; }
+        nav .links li a:hover .circle,
+        nav .links li a:active .circle {
+          background-color: #b1972c; }
 
 .content {
   background: #fff;
@@ -511,15 +515,19 @@ nav {
   margin-right: 0; }
   @media (min-width: 700px) {
     .content {
-      width: 65.95745%;
+      width: 75%;
       float: right;
       margin-right: 0;
       min-height: 40rem;
-      padding: 3rem; } }
+      padding: 3.6rem 3rem 3rem; } }
   .content > section {
-    padding-bottom: 2rem; }
+    padding-bottom: 2rem;
+    width: 90%; }
   .content h1, .content h2, .content h3, .content h4, .content h5 {
-    color: #230739; }
+    color: #230739;
+    font-family: "droid sans"; }
+  .content h3 {
+    font-size: 1.33rem; }
 
 ul.project-list {
   list-style: none;
@@ -534,9 +542,8 @@ ul.project-list {
     padding: 0; }
     @media (min-width: 700px) {
       ul.project-list li {
-        width: 48.93617%;
-        float: left;
-        margin-right: 2.12766%; } }
+        width: 50%;
+        float: left; } }
     ul.project-list li img {
       margin-bottom: 1rem;
       width: 100%; }
