--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -4,7 +4,7 @@ $susy: (
   columns: 12, 
   container: 64rem,
   global-box-sizing: border-box,
-  gutters: 1/3
+  gutters: 0
  );
 
 @include border-box-sizing;
@@ -27,7 +27,7 @@ a:active {
 .bar {
 	background: #3c0e62 url('../img/bg-mountains.jpg') no-repeat 0 bottom;
 	background-size: cover;
-	height: 20rem;
+	height: 21rem;
 	position: absolute;
 	top: 0;
 	z-index: -1;
@@ -40,40 +40,39 @@ a:active {
 	margin: 5rem auto 0;
 }
 
-header {
-	color: #fff;
-	height: 15rem;
-	padding: 3rem 0;
-	text-transform: uppercase;
-
-	h1 {
-		font-size: 3rem;
-		font-weight: 300;
-		margin-bottom: .5rem;
-	}
-
-	h2 {
-		font-size: 1rem;
-		font-weight: 300;
-		margin-bottom: 0;
-	}
-}
-
 .sidebar {
 	@include span(12);
 
 
 	@media (min-width: 700px) {
-		@include span(4);
-		margin-right: 0;
+		@include span(3);
 		padding: 0 3rem;
 	}	
+}
+
+header {
+	color: #fff;
+	height: 16rem;
+	padding: 3rem 0;
+	text-transform: uppercase;
+
+	h1 {
+		font-size: 3.75rem;
+		font-weight: 300;
+		margin-bottom: .5rem;
+	}
+
+	h2 {
+		font-size: 1.2rem;
+		font-weight: 300;
+		letter-spacing: 1px;
+		margin-bottom: 0;
+	}
 }
 
 nav {
 
 	padding: 3rem 0;
-
 
 	.links {
 		display: block;
@@ -83,9 +82,8 @@ nav {
 		li {
 			color: #333;
 			display: block;
-			font-family: $secondary-font-family;
-			font-size: 1.5rem;
-			line-height: 2.5rem;
+			font-size: 1.33rem;
+			line-height: 1.75rem;
 			margin-bottom: 1rem;
 			overflow: hidden;
 
@@ -94,30 +92,24 @@ nav {
 				border-radius: 100%;
 				color: #fff;
 				float: left;
-				height: 2.5rem;
-				margin: 0 1rem 0 0;
+				font-size: 1.25rem;
+				height: 1.5rem;
+				margin: 0 .52rem 0 0;
 				overflow: hidden;
 				position: relative;
 				text-align: center;
-				width: 2.5rem;		
+				width: 1.5rem;		
 
 				&:before {
 					position: relative;
 					left: 1px;
-					top: 8px;
+					top: 1px;
 				}	
 			}			
 
-			a:hover,
-			a:active {
-				.circle {
-					background-color: #b1972c;
-				}
-			}
-
 			a:link,
 			a:visited {
-				color: #333;
+				color: #666;
 				text-decoration: none;
 			}
 
@@ -125,6 +117,10 @@ nav {
 			a:active {
 				color: #000;
 				text-decoration: none;
+
+				.circle {
+					background-color: #b1972c;
+				}				
 			}			
 
 
@@ -137,18 +133,25 @@ nav {
 	background: #fff;
 	@include span(12);
 	@media (min-width: 700px) {
-		@include span(last 8);
+		@include span(last 9);
 		min-height: 40rem;
-		padding: 3rem;
+		padding: 3.6rem 3rem 3rem;
 	}		
 
 	> section {
 		padding-bottom: 2rem;
+		width: 90%;
 	}
 
 	h1, h2, h3, h4, h5 {
 		color: #230739;
+		font-family: 'droid sans'
 	}
+
+	h3 {
+		font-size: 1.33rem;
+	}
+
 }
 
 ul.project-list {
