--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -1,7 +1,7 @@
 $base-font-size: 18px;
-$base-font-family: "PT Serif", sans-serif;
 $base-font-weight: 300;
-$secondary-font-family: "droid-serif", sans-serif;
+$font-for-headers: 'pathway gothic one', arial, sans-serif;
+$font-for-body: "droid-serif", sans-serif;
 
 /* Typography */
 html {
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-	font-family: $base-font-family;
+	font-family: $font-for-body;
 	font-size: 100%;
 	font-weight: $base-font-weight;
 	line-height: 1;
@@ -24,13 +24,19 @@ h2, .h2,
 h3, .h3,
 h4, .h4,
 h5, .h5 {
-	font-family: $secondary-font-family; 
+	font-family: $font-for-headers; 
 	font-weight: 700;
 	line-height: 1;
 	margin: 0 0 1rem;
+	text-transform: uppercase;
 	}
 p { 
 	font-size: 1rem; 
 	line-height: 1.5rem; 
 	margin: 0 0 1rem;
+}
+
+nav {
+	font-family: 'Roboto';
+	text-transform: uppercase;
 }
