--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -521,7 +521,8 @@ nav {
       min-height: 40rem;
       padding: 3.6rem 3rem 3rem; } }
   .content > section {
-    padding-bottom: 2rem;
+    padding-bottom: 2rem; }
+  .content .about {
     width: 90%; }
   .content h1, .content h2, .content h3, .content h4, .content h5 {
     color: #230739;
@@ -529,23 +530,34 @@ nav {
   .content h3 {
     font-size: 1.33rem; }
 
-ul.project-list {
-  list-style: none;
-  padding: 0;
-  -webkit-margin-before: 0; }
-  ul.project-list li {
-    width: 100%;
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
-    margin: 0 0 1rem 0;
-    padding: 0; }
-    @media (min-width: 700px) {
-      ul.project-list li {
-        width: 50%;
-        float: left; } }
-    ul.project-list li img {
-      margin-bottom: 1rem;
-      width: 100%; }
+.projects-container {
+  max-width: 64rem;
+  margin-left: auto;
+  margin-right: auto; }
+  .projects-container:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  .projects-container figure {
+    display: block;
+    margin: 0 0 1rem;
+    padding: 0;
+    width: 33.33333%;
+    float: left; }
+    .projects-container figure .img-container {
+      background: #666;
+      border: 1px #ccc solid; }
+      @media (min-width: 700px) {
+        .projects-container figure .img-container {
+          overflow: hidden; } }
+      .projects-container figure .img-container img {
+        height: 150px;
+        width: 200px; }
+    .projects-container figure figcaption {
+      padding: 1.5rem 0.5rem; }
+      @media (min-width: 700px) {
+        .projects-container figure figcaption {
+          width: 66.66667%;
+          float: left; } }
 
 /*# sourceMappingURL=styles.css.map */
