--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -60,13 +60,14 @@ header {
 		font-size: 3.75rem;
 		font-weight: 300;
 		margin-bottom: .5rem;
-	}
 
-	h2 {
-		font-size: 1.2rem;
-		font-weight: 300;
-		letter-spacing: 1px;
-		margin-bottom: 0;
+		span {
+			display: block;
+			font-size: 1.2rem;
+			font-weight: 300;
+			letter-spacing: 1px;
+			margin: 0.5rem 0 0;		
+		}
 	}
 }
 
@@ -122,8 +123,6 @@ nav {
 					background-color: #b1972c;
 				}				
 			}			
-
-
 		}
 	}
 }
@@ -161,13 +160,20 @@ nav {
 
 	figure {
 		display: block;
-		margin: 0 0 1rem;
+		margin: 0 0 0.5rem;
 		padding: 0;
-		@include span(4 of 12);		
+		padding-right: 1.5rem;	
+
+		@include span(6 of 12);	
+
+		&:nth-child(3) {
+			clear: left;
+		}
 
 		.img-container {
-			background: #666;
+			background: #f6f6f6;
 			border: 1px #ccc solid;
+			min-height: 150px;
 			@media (min-width: 700px) {
 				overflow: hidden;
 			}
@@ -179,10 +185,36 @@ nav {
 		}
 
 		figcaption {
-			padding: 1.5rem 0.5rem;
-			@media (min-width: 700px) {
-				@include span(8);
-			}		
+			padding: 1rem 0.5rem;		
+
+			h4 {
+				margin-bottom: 0.5rem;
+				text-transform: none;
+			}
+			p {
+				font-size: .85rem;
+				line-height: 1.5em;
+			}
 		}
+	}
+}
+
+.list-tags {
+	list-style: none;
+	margin: 0 0 1rem;
+	padding: 0;
+
+	li {
+		background: #666;
+		border-radius: 2px;
+		color: #fff;
+		display: inline-block;
+		font-family: arial, sans-serif;
+		font-size: .65rem;
+		letter-spacing: 1px;
+		margin: 0 1px 1px 0;
+		padding: 4px 8px;
+		text-transform: uppercase;
+		white-space: nowrap;
 	}
 }
