--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -361,7 +361,7 @@ html {
   font-size: 18px; }
 
 body {
-  font-family: "droid-serif", sans-serif;
+  font-family: "Droid Serif", Georgia, serif;
   font-size: 100%;
   font-weight: 300;
   line-height: 1; }
@@ -386,11 +386,10 @@ h2, .h2,
 h3, .h3,
 h4, .h4,
 h5, .h5 {
-  font-family: "pathway gothic one", arial, sans-serif;
+  font-family: "Droid Sans Serif", arial, sans-serif;
   font-weight: 700;
   line-height: 1;
-  margin: 0 0 1rem;
-  text-transform: uppercase; }
+  margin: 0 0 1rem; }
 
 p {
   font-size: 1rem;
@@ -398,8 +397,7 @@ p {
   margin: 0 0 1rem; }
 
 nav {
-  font-family: 'Roboto';
-  text-transform: uppercase; }
+  font-family: "Droid Sans Serif", arial, sans-serif; }
 
 /* Structure */
 *, *:before, *:after {
@@ -413,11 +411,11 @@ body {
 
 a:link,
 a:visited {
-  color: #987D0F; }
+  color: #820D71; }
 
 a:hover,
 a:active {
-  color: #726A1C; }
+  color: #B548A6; }
 
 .bar {
   background: #3c0e62 url("../img/bg-mountains.jpg") no-repeat 0 bottom;
@@ -429,11 +427,11 @@ a:active {
   width: 100%; }
 
 .wrapper {
-  max-width: 64rem;
+  max-width: 1153px;
   margin-left: auto;
   margin-right: auto;
   background: transparent;
-  margin: 5rem auto 0; }
+  margin: 5rem auto; }
   .wrapper:after {
     content: " ";
     display: block;
@@ -448,7 +446,7 @@ a:active {
     .sidebar {
       width: 25%;
       float: left;
-      padding: 0 3rem; } }
+      padding: 0 2.5rem; } }
 
 header {
   color: #fff;
@@ -456,6 +454,7 @@ header {
   padding: 3rem 0;
   text-transform: uppercase; }
   header h1 {
+    font-family: "Pathway Gothic One", arial, sans-serif;
     font-size: 3.75rem;
     font-weight: 300;
     margin-bottom: .5rem; }
@@ -467,7 +466,7 @@ header {
       margin: 0.5rem 0 0; }
 
 nav {
-  padding: 3rem 0; }
+  padding: 2.5rem 0; }
   nav .links {
     display: block;
     list-style: none;
@@ -476,18 +475,18 @@ nav {
     nav .links li {
       color: #333;
       display: block;
-      font-size: 1.33rem;
-      line-height: 1.75rem;
+      font-size: 1.25rem;
+      line-height: 1.5rem;
       margin-bottom: 1rem;
       overflow: hidden; }
       nav .links li .circle {
-        background: #d2b748;
+        background: #77c08d;
         border-radius: 100%;
         color: #fff;
         float: left;
         font-size: 1.25rem;
         height: 1.5rem;
-        margin: 0 .52rem 0 0;
+        margin: 0 .75rem 0 0;
         overflow: hidden;
         position: relative;
         text-align: center;
@@ -506,10 +505,11 @@ nav {
         text-decoration: none; }
         nav .links li a:hover .circle,
         nav .links li a:active .circle {
-          background-color: #b1972c; }
+          background-color: #41b865; }
 
 .content {
   background: #fff;
+  position: relative;
   width: 100%;
   float: left;
   margin-left: 0;
@@ -520,9 +520,12 @@ nav {
       float: right;
       margin-right: 0;
       min-height: 40rem;
-      padding: 3.6rem 3rem 3rem; } }
+      padding: 3.5rem 2.5rem 2.5rem; } }
   .content > section {
     padding-bottom: 2rem; }
+  .content > section + section {
+    border-top: 1px #ccc solid;
+    padding-top: 2rem; }
   .content .about {
     width: 90%; }
   .content h1, .content h2, .content h3, .content h4, .content h5 {
@@ -532,38 +535,39 @@ nav {
     font-size: 1.33rem; }
 
 .projects-container {
-  max-width: 64rem;
+  max-width: 1153px;
   margin-left: auto;
   margin-right: auto; }
   .projects-container:after {
     content: " ";
     display: block;
     clear: both; }
-  .projects-container figure {
+  .projects-container .project {
     display: block;
     margin: 0 0 0.5rem;
     padding: 0;
-    padding-right: 1.5rem;
     width: 50%;
     float: left; }
-    .projects-container figure:nth-child(3) {
+    .projects-container .project:nth-child(3) {
       clear: left; }
-    .projects-container figure .img-container {
+    .projects-container .project figure {
+      margin: 0 12% 0 0; }
+    .projects-container .project .img-container {
       background: #f6f6f6;
       border: 1px #ccc solid;
-      min-height: 150px; }
+      min-height: 200px; }
       @media (min-width: 700px) {
-        .projects-container figure .img-container {
+        .projects-container .project .img-container {
           overflow: hidden; } }
-      .projects-container figure .img-container img {
+      .projects-container .project .img-container img {
         height: 150px;
         width: 200px; }
-    .projects-container figure figcaption {
-      padding: 1rem 0.5rem; }
-      .projects-container figure figcaption h4 {
+    .projects-container .project figcaption {
+      padding: 1.5rem .5rem .5rem; }
+      .projects-container .project figcaption h4 {
         margin-bottom: 0.5rem;
         text-transform: none; }
-      .projects-container figure figcaption p {
+      .projects-container .project figcaption p {
         font-size: .85rem;
         line-height: 1.5em; }
 
@@ -579,9 +583,13 @@ nav {
     font-family: arial, sans-serif;
     font-size: .65rem;
     letter-spacing: 1px;
-    margin: 0 1px 1px 0;
+    margin: 0 1px 4px 0;
     padding: 4px 8px;
     text-transform: uppercase;
     white-space: nowrap; }
+
+.secret-page-corner {
+  height: 69px;
+  width: 69px; }
 
 /*# sourceMappingURL=styles.css.map */
