--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -1,6 +1,6 @@
 $base-font-size: 18px;
 $base-font-weight: 300;
-$font-for-headers: 'Droid Sans Serif', arial, sans-serif;
+$font-for-headers: 'Droid Sans', arial, sans-serif;
 $font-for-body: 'Droid Serif', Georgia, serif;
 $font-for-logo: 'Pathway Gothic One', arial, sans-serif;
 
