--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -356,9 +356,226 @@ td,
 th {
   padding: 0; }
 
+/* Structure */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  background: #f4f4f4;
+  color: #333; }
+
+a:link,
+a:visited {
+  color: #B548A6; }
+
+a:hover,
+a:active {
+  color: #820D71; }
+
+.bar {
+  background: #3c0e62 url("../img/bg-mountains.jpg") no-repeat 0 bottom;
+  background-size: cover;
+  height: 21rem;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  width: 100%; }
+
+.wrapper {
+  max-width: 1153px;
+  margin-left: auto;
+  margin-right: auto;
+  background: transparent;
+  margin: 0 auto; }
+  .wrapper:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  @media (min-width: 600px) {
+    .wrapper {
+      margin: 5rem auto; } }
+
+.sidebar {
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0; }
+  @media (min-width: 600px) {
+    .sidebar {
+      width: 25%;
+      float: left;
+      padding: 0 2.5rem; } }
+
+header {
+  color: #fff;
+  padding: 1rem;
+  text-transform: uppercase; }
+  @media (min-width: 600px) {
+    header {
+      height: 16rem;
+      padding: 3rem 0; } }
+  header h1 {
+    font-size: 3rem;
+    font-weight: 300;
+    margin-bottom: .25rem; }
+    @media (min-width: 600px) {
+      header h1 {
+        font-size: 3.75rem;
+        margin-bottom: .5rem; } }
+    header h1 span {
+      display: block;
+      font-size: 1.2rem;
+      font-weight: 300;
+      letter-spacing: 1px;
+      margin: 0.5rem 0 0; }
+
+nav {
+  background: #f4f4f4;
+  padding: 1rem; }
+  @media (min-width: 600px) {
+    nav {
+      background: transparent;
+      padding: 2.5rem 0; } }
+  nav .links {
+    display: block;
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+    nav .links li {
+      color: #333;
+      display: block;
+      font-size: 1.25rem;
+      line-height: 1.5rem;
+      margin-bottom: .75rem;
+      overflow: hidden; }
+      nav .links li:last-child {
+        margin-bottom: 0; }
+      nav .links li .circle {
+        background: #77c08d;
+        border-radius: 100%;
+        color: #fff;
+        float: left;
+        font-size: 1.25rem;
+        height: 1.5rem;
+        margin: 0 .75rem 0 0;
+        overflow: hidden;
+        position: relative;
+        text-align: center;
+        width: 1.5rem; }
+        nav .links li .circle:before {
+          position: relative;
+          left: 1px;
+          top: 1px; }
+      nav .links li a:link,
+      nav .links li a:visited {
+        color: #666;
+        text-decoration: none; }
+      nav .links li a:hover,
+      nav .links li a:active {
+        color: #000;
+        text-decoration: none; }
+        nav .links li a:hover .circle,
+        nav .links li a:active .circle {
+          background-color: #41b865; }
+
+.content {
+  background: #fff;
+  padding: 2rem 1rem 1rem;
+  position: relative;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0; }
+  @media (min-width: 600px) {
+    .content {
+      width: 75%;
+      float: right;
+      margin-right: 0;
+      min-height: 40rem;
+      padding: 3.5rem 2.5rem 2.5rem; } }
+  .content > section {
+    padding-bottom: 2rem; }
+  .content > section + section {
+    border-top: 1px #ccc solid;
+    padding-top: 2rem; }
+  .content .about {
+    width: 90%; }
+  .content h1, .content h2, .content h3, .content h4, .content h5 {
+    color: #230739; }
+  .content h3 {
+    font-size: 1.33rem; }
+
+.projects-container {
+  max-width: 1153px;
+  margin-left: auto;
+  margin-right: auto; }
+  .projects-container:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  .projects-container .project {
+    display: block;
+    margin: 0 0 0.5rem;
+    padding: 0; }
+    @media (min-width: 600px) {
+      .projects-container .project {
+        width: 50%;
+        float: left; } }
+    .projects-container .project figure {
+      margin: 0; }
+      @media (min-width: 600px) {
+        .projects-container .project figure {
+          margin-right: 12%; } }
+    .projects-container .project .img-container {
+      background: #f6f6f6;
+      border: 1px #ccc solid;
+      min-height: 200px; }
+      @media (min-width: 600px) {
+        .projects-container .project .img-container {
+          overflow: hidden; } }
+      .projects-container .project .img-container img {
+        height: 150px;
+        width: 200px; }
+    .projects-container .project figcaption {
+      padding: 1.5rem .5rem .5rem; }
+      .projects-container .project figcaption h4 {
+        margin-bottom: 0.5rem;
+        text-transform: none; }
+      .projects-container .project figcaption p {
+        font-size: .85rem;
+        line-height: 1.5em; }
+        .projects-container .project figcaption p a .fa {
+          margin-left: .5rem; }
+
+.list-tags {
+  list-style: none;
+  margin: 0 0 1rem;
+  padding: 0; }
+  .list-tags li {
+    background: #666;
+    border-radius: 2px;
+    color: #fff;
+    display: inline-block;
+    font-family: arial, sans-serif;
+    font-size: .65rem;
+    letter-spacing: 1px;
+    margin: 0 1px 4px 0;
+    padding: 4px 8px;
+    text-transform: uppercase;
+    white-space: nowrap; }
+
+.secret-page-corner {
+  height: 69px;
+  width: 69px; }
+
 /* Typography */
 html {
-  font-size: 18px; }
+  font-size: 16px; }
+  @media (min-width: 600px) {
+    html {
+      font-size: 18px; } }
 
 body {
   font-family: "Droid Serif", Georgia, serif;
@@ -396,201 +613,10 @@ p {
   line-height: 1.5rem;
   margin: 0 0 1rem; }
 
+header h1 {
+  font-family: "Pathway Gothic One", arial, sans-serif; }
+
 nav {
   font-family: "Droid Sans", arial, sans-serif; }
-
-/* Structure */
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  background: #f4f4f4;
-  color: #333; }
-
-a:link,
-a:visited {
-  color: #B548A6; }
-
-a:hover,
-a:active {
-  color: #820D71; }
-
-.bar {
-  background: #3c0e62 url("../img/bg-mountains.jpg") no-repeat 0 bottom;
-  background-size: cover;
-  height: 21rem;
-  position: absolute;
-  top: 0;
-  z-index: -1;
-  width: 100%; }
-
-.wrapper {
-  max-width: 1153px;
-  margin-left: auto;
-  margin-right: auto;
-  background: transparent;
-  margin: 5rem auto; }
-  .wrapper:after {
-    content: " ";
-    display: block;
-    clear: both; }
-
-.sidebar {
-  width: 100%;
-  float: left;
-  margin-left: 0;
-  margin-right: 0; }
-  @media (min-width: 700px) {
-    .sidebar {
-      width: 25%;
-      float: left;
-      padding: 0 2.5rem; } }
-
-header {
-  color: #fff;
-  height: 16rem;
-  padding: 3rem 0;
-  text-transform: uppercase; }
-  header h1 {
-    font-family: "Pathway Gothic One", arial, sans-serif;
-    font-size: 3.75rem;
-    font-weight: 300;
-    margin-bottom: .5rem; }
-    header h1 span {
-      display: block;
-      font-size: 1.2rem;
-      font-weight: 300;
-      letter-spacing: 1px;
-      margin: 0.5rem 0 0; }
-
-nav {
-  padding: 2.5rem 0; }
-  nav .links {
-    display: block;
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-    nav .links li {
-      color: #333;
-      display: block;
-      font-size: 1.25rem;
-      line-height: 1.5rem;
-      margin-bottom: .75rem;
-      overflow: hidden; }
-      nav .links li .circle {
-        background: #77c08d;
-        border-radius: 100%;
-        color: #fff;
-        float: left;
-        font-size: 1.25rem;
-        height: 1.5rem;
-        margin: 0 .75rem 0 0;
-        overflow: hidden;
-        position: relative;
-        text-align: center;
-        width: 1.5rem; }
-        nav .links li .circle:before {
-          position: relative;
-          left: 1px;
-          top: 1px; }
-      nav .links li a:link,
-      nav .links li a:visited {
-        color: #666;
-        text-decoration: none; }
-      nav .links li a:hover,
-      nav .links li a:active {
-        color: #000;
-        text-decoration: none; }
-        nav .links li a:hover .circle,
-        nav .links li a:active .circle {
-          background-color: #41b865; }
-
-.content {
-  background: #fff;
-  position: relative;
-  width: 100%;
-  float: left;
-  margin-left: 0;
-  margin-right: 0; }
-  @media (min-width: 700px) {
-    .content {
-      width: 75%;
-      float: right;
-      margin-right: 0;
-      min-height: 40rem;
-      padding: 3.5rem 2.5rem 2.5rem; } }
-  .content > section {
-    padding-bottom: 2rem; }
-  .content > section + section {
-    border-top: 1px #ccc solid;
-    padding-top: 2rem; }
-  .content .about {
-    width: 90%; }
-  .content h1, .content h2, .content h3, .content h4, .content h5 {
-    color: #230739; }
-  .content h3 {
-    font-size: 1.33rem; }
-
-.projects-container {
-  max-width: 1153px;
-  margin-left: auto;
-  margin-right: auto; }
-  .projects-container:after {
-    content: " ";
-    display: block;
-    clear: both; }
-  .projects-container .project {
-    display: block;
-    margin: 0 0 0.5rem;
-    padding: 0;
-    width: 50%;
-    float: left; }
-    .projects-container .project:nth-child(3) {
-      clear: left; }
-    .projects-container .project figure {
-      margin: 0 12% 0 0; }
-    .projects-container .project .img-container {
-      background: #f6f6f6;
-      border: 1px #ccc solid;
-      min-height: 200px; }
-      @media (min-width: 700px) {
-        .projects-container .project .img-container {
-          overflow: hidden; } }
-      .projects-container .project .img-container img {
-        height: 150px;
-        width: 200px; }
-    .projects-container .project figcaption {
-      padding: 1.5rem .5rem .5rem; }
-      .projects-container .project figcaption h4 {
-        margin-bottom: 0.5rem;
-        text-transform: none; }
-      .projects-container .project figcaption p {
-        font-size: .85rem;
-        line-height: 1.5em; }
-        .projects-container .project figcaption p a .fa {
-          margin-left: .5rem; }
-
-.list-tags {
-  list-style: none;
-  margin: 0 0 1rem;
-  padding: 0; }
-  .list-tags li {
-    background: #666;
-    border-radius: 2px;
-    color: #fff;
-    display: inline-block;
-    font-family: arial, sans-serif;
-    font-size: .65rem;
-    letter-spacing: 1px;
-    margin: 0 1px 4px 0;
-    padding: 4px 8px;
-    text-transform: uppercase;
-    white-space: nowrap; }
-
-.secret-page-corner {
-  height: 69px;
-  width: 69px; }
 
 /*# sourceMappingURL=styles.css.map */
