--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -6,7 +6,11 @@ $font-for-logo: 'Pathway Gothic One', arial, sans-serif;
 
 /* Typography */
 html {
-	font-size: $base-font-size;
+	font-size: 16px;
+
+	@media (min-width: $medium-screen) {
+		font-size: 18px;
+	}
 }
 
 body {
@@ -35,6 +39,10 @@ p {
 	font-size: 1rem; 
 	line-height: 1.5rem; 
 	margin: 0 0 1rem;
+}
+
+header h1 {
+	font-family: $font-for-logo;	
 }
 
 nav {
