Adding CSS nth child to fix portfolio grid

--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -208,6 +208,10 @@ nav {
 
 		@media (min-width: $medium-screen) {
 			@include span(6 of 12);
+
+			&:nth-child(3n) {
+				clear: left;
+			}
 		}
 
 		figure {
