--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -522,7 +522,9 @@ nav {
     @media (min-width: 600px) {
       .projects-container .project {
         width: 50%;
-        float: left; } }
+        float: left; }
+        .projects-container .project:nth-child(3n) {
+          clear: left; } }
     .projects-container .project figure {
       margin: 0; }
       @media (min-width: 600px) {
