--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -53,7 +53,7 @@ a:active {
 	background: transparent;
 	margin: 0 auto;
 
-	@media (min-width: $medium-screen) {
+	@media (min-width: $large-screen) {
 		margin: 5rem auto;
 	}
 }
@@ -62,7 +62,7 @@ a:active {
 	@include span(12);
 
 
-	@media (min-width: $medium-screen) {
+	@media (min-width: $large-screen) {
 		@include span(3);
 		padding: 0 2.5rem;
 	}	
@@ -73,7 +73,7 @@ header {
 	padding: 1rem;
 	text-transform: uppercase;
 
-	@media (min-width: $medium-screen) {
+	@media (min-width: $large-screen) {
 		height: 16rem;
 		padding: 3rem 0;
 	}
@@ -83,7 +83,7 @@ header {
 		font-weight: 300;
 		margin-bottom: .25rem;
 
-		@media (min-width: $medium-screen) {
+		@media (min-width: $large-screen) {
 			font-size: 3.75rem;
 			margin-bottom: .5rem;
 		}
@@ -102,7 +102,7 @@ nav {
 	background: #f4f4f4;
 	padding: 1rem;
 
-	@media (min-width: $medium-screen) {
+	@media (min-width: $large-screen) {
 		background: transparent;
 		padding: 2.5rem 0;
 	}
@@ -125,7 +125,7 @@ nav {
 			}
 
 			.circle {
-				background: #77c08d;
+				background: #5bab7d;
 				border-radius: 100%;
 				color: #fff;
 				float: left;
@@ -156,7 +156,7 @@ nav {
 				text-decoration: none;
 
 				.circle {
-					background-color: #41b865;
+					background-color: #15a652;
 				}				
 			}			
 		}
@@ -170,8 +170,10 @@ nav {
 	position: relative; 
 
 	@include span(12);
-	@media (min-width: $medium-screen) {
+
+	@media (min-width: $large-screen) {
 		@include span(last 9);
+		box-shadow: 0 0 5px 2px rgba(0,0,0,.05);
 		min-height: 40rem;
 		padding: 3.5rem 2.5rem 2.5rem;
 	}		
@@ -185,16 +187,15 @@ nav {
 		padding-top: 2rem;		
 	}
 
-	.about {
-		width: 90%;
+	.about,
+	.skills-group {
+		@media (min-width: $large-screen) {
+			padding-right: 10%;
+		}
 	}
 
-	h1, h2, h3, h4, h5 {
-		color: #230739;
-	}
-
-	h3 {
-		font-size: 1.33rem;
+	h1, h2, h3 {
+		color: $color-3;
 	}
 }
 
@@ -206,7 +207,7 @@ nav {
 		margin: 0 0 0.5rem;
 		padding: 0;	
 
-		@media (min-width: $medium-screen) {
+		@media (min-width: $large-screen) {
 			@include span(6 of 12);
 
 			&:nth-child(3n) {
@@ -217,22 +218,20 @@ nav {
 		figure {
 			margin: 0;
 
-			@media (min-width: $medium-screen) {
+			@media (min-width: $large-screen) {
 				margin-right: 12%;
 			}
 		}		
 
 		.img-container {
-			background: #f6f6f6;
+			background: red;
 			border: 1px #ccc solid;
-			min-height: 200px;
-			@media (min-width: $medium-screen) {
+			@media (min-width: $large-screen) {
 				overflow: hidden;
 			}
 			img {
-				height: 150px;
-				width: 200px;
-				// TODO: Adjust thumbnail IMG to these dimensions
+				vertical-align: middle;
+				width: 100%;
 			}
 		}
 
@@ -240,6 +239,7 @@ nav {
 			padding: 1.5rem .5rem .5rem;		
 
 			h4 {
+				font-size: 1rem;
 				margin-bottom: 0.5rem;
 				text-transform: none;
 			}
@@ -248,9 +248,44 @@ nav {
 				line-height: 1.5em;
 
 				a .fa {
-					margin-left: .5rem;
+					margin-left: .25rem;
 				}
 			}
+		}
+	}
+}
+
+.skills {
+	.skills-group {
+		border-top: 1px #ccc solid;
+		padding-top: 2rem;
+		margin-bottom: 3rem;
+
+		h4 {
+			font-size: 1rem;
+			margin-bottom: .25rem;
+		}
+
+		.company-name {
+			display: block;
+			margin-bottom: .25rem;
+			font-size: 1.25rem;
+		}
+
+		ul {
+			font-size: .85rem;
+			line-height: 1.5em;
+		}
+
+		table td {
+			vertical-align: top;
+		}
+
+		&.work-experience,
+		&.languages {
+			h4 {
+				margin-bottom: 1rem;
+			}			
 		}
 	}
 }
