--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -19,17 +19,19 @@ body {
 	font-weight: $base-font-weight;
 	line-height: 1;
 }
-h1, .h1 { font-size: 2rem;}
-h2, .h2 { font-size: 1.5rem;}
-h3, .h3 { font-size: 1.25rem; }
-h4, .h4 { font-size: 1rem; }
-h5, .h5 { font-size: 1rem; }
+h1, .h1 { font-size: 2rem; }
+h2, .h2 { font-size: 1.5rem; }
+h3, .h3 { font-size: 1.5rem; }
+h4, .h4 { font-size: 1.25rem; }
+h5, .h5 { font-size: 1.25rem; }
+h6, .h6 { font-size: 1rem; }
 
 h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4,
-h5, .h5 {
+h5, .h5,
+h6, .h6 {
 	font-family: $font-for-headers; 
 	font-weight: 700;
 	line-height: 1;
@@ -39,6 +41,17 @@ p {
 	font-size: 1rem; 
 	line-height: 1.5rem; 
 	margin: 0 0 1rem;
+}
+
+ul,
+ol {
+	line-height: 1.5rem;
+	margin: 0 0 1rem;
+}
+
+ul li,
+ol li {
+	margin: 0 0 .5rem;
 }
 
 header h1 {
