--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -193,10 +193,6 @@ nav {
 			padding-right: 10%;
 		}
 	}
-
-	h1, h2, h3 {
-		color: $color-3;
-	}
 }
 
 .projects-container {
@@ -237,6 +233,58 @@ nav {
 
 		figcaption {
 			padding: 1.5rem .5rem .5rem;		
+
+			h4 {
+				font-size: 1rem;
+				margin-bottom: 0.5rem;
+				text-transform: none;
+			}
+			p {
+				font-size: .85rem;
+				line-height: 1.5em;
+
+				a .fa {
+					margin-left: .25rem;
+				}
+			}
+		}
+	}
+}
+
+.project-details-container {
+
+	.project {
+
+		@include container(12);
+
+		display: block;
+		margin: 0 0 0.5rem;
+		padding: 0;	
+
+		figure {
+			margin: 0;
+
+			@media (min-width: $large-screen) {
+				margin-right: 12%;
+			}
+		}		
+
+		.img-container {
+			border: 1px #ccc solid;
+			@include span(4 of 12);
+
+			@media (min-width: $large-screen) {
+				overflow: hidden;
+			}
+			img {
+				vertical-align: middle;
+				width: 100%;
+			}			
+		}
+
+		figcaption {
+			padding: 1.5rem;
+			@include span(8 of 12);		
 
 			h4 {
 				font-size: 1rem;
