--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -36,7 +36,15 @@ h6, .h6 {
 	font-weight: 700;
 	line-height: 1;
 	margin: 0 0 1rem;
-	}
+}
+
+.header-tags {
+	color: #000;
+	font-size: .85rem;
+	margin: 0 0 .25rem;
+	text-transform: uppercase;
+}
+
 p { 
 	font-size: 1rem; 
 	line-height: 1.5rem; 
