--- a/app/assets/scss/structure.scss
+++ b/app/assets/scss/structure.scss
@@ -16,6 +16,8 @@ $x-large-screen: 1200px;
 $color-2: #B548A6;
 $color-3: #820D71;
 
+$purple-1: #645389;
+
 
 @include border-box-sizing;
 
@@ -186,13 +188,6 @@ nav {
 		border-top: 1px #ccc solid;
 		padding-top: 2rem;		
 	}
-
-	.about,
-	.skills-group {
-		@media (min-width: $large-screen) {
-			padding-right: 10%;
-		}
-	}
 }
 
 .projects-container {
@@ -220,11 +215,21 @@ nav {
 		}		
 
 		.img-container {
-			background: red;
-			border: 1px #ccc solid;
+			background: #fff;
+			border: 1px #ccc solid;	
+
 			@media (min-width: $large-screen) {
 				overflow: hidden;
 			}
+
+			a:hover,
+			a:active {
+				opacity: .8;
+			    transition: opacity .55s ease-in-out;
+			    -moz-transition: opacity .55s ease-in-out;
+			    -webkit-transition: opacity .55s ease-in-out;							
+			}
+
 			img {
 				vertical-align: middle;
 				width: 100%;
@@ -251,55 +256,12 @@ nav {
 	}
 }
 
-.project-details-container {
-
-	.project {
-
-		@include container(12);
-
-		display: block;
-		margin: 0 0 0.5rem;
-		padding: 0;	
-
-		figure {
-			margin: 0;
-
-			@media (min-width: $large-screen) {
-				margin-right: 12%;
-			}
-		}		
-
-		.img-container {
-			border: 1px #ccc solid;
-			@include span(4 of 12);
-
-			@media (min-width: $large-screen) {
-				overflow: hidden;
-			}
-			img {
-				vertical-align: middle;
-				width: 100%;
-			}			
-		}
-
-		figcaption {
-			padding: 1.5rem;
-			@include span(8 of 12);		
-
-			h4 {
-				font-size: 1rem;
-				margin-bottom: 0.5rem;
-				text-transform: none;
-			}
-			p {
-				font-size: .85rem;
-				line-height: 1.5em;
-
-				a .fa {
-					margin-left: .25rem;
-				}
-			}
-		}
+.project-screenshot {
+	border: 1px #ccc solid;
+	margin: 0;
+	img {
+		max-width: 100%;
+		vertical-align: middle;
 	}
 }
 
@@ -344,7 +306,7 @@ nav {
 	padding: 0;
 
 	li {
-		background: #666;
+		background: #645389;
 		border-radius: 2px;
 		color: #fff;
 		display: inline-block;
@@ -352,7 +314,7 @@ nav {
 		font-size: .65rem;
 		letter-spacing: 1px;
 		margin: 0 1px 4px 0;
-		padding: 4px 8px;
+		padding: 0 8px;
 		text-transform: uppercase;
 		white-space: nowrap;
 	}
@@ -362,4 +324,26 @@ nav {
 .secret-page-corner {
   height: 69px;
   width: 69px;
+}
+
+.icon-margin-right:before {
+	margin-right: 10px;
+}
+
+footer {
+	clear: both;
+	padding: 1rem 0;
+	text-align: center;
+	width: 100%;
+
+	@include span(12);
+
+	@media (min-width: $large-screen) {
+		@include span(last 9);
+	}	
+
+	p {
+		font-size: .75rem;
+		margin: 0;
+	}
 }
