--- a/app/assets/scss/typography.scss
+++ b/app/assets/scss/typography.scss
@@ -21,7 +21,7 @@ body {
 }
 h1, .h1 { font-size: 2rem; }
 h2, .h2 { font-size: 1.5rem; }
-h3, .h3 { font-size: 1.5rem; }
+h3, .h3 { font-size: 1.25rem; }
 h4, .h4 { font-size: 1.25rem; }
 h5, .h5 { font-size: 1.25rem; }
 h6, .h6 { font-size: 1rem; }
@@ -68,4 +68,10 @@ header h1 {
 
 nav {
 	font-family: $font-for-headers;
+}
+
+.pad-right {
+	@media (min-width: $large-screen) {
+		padding-right: 10%;
+	}
 }
