--- a/_source/templates/pages/project-espn.mustache
+++ b/_source/templates/pages/project-espn.mustache
@@ -42,11 +42,9 @@
 					<a href="http://www.espneventwrapups.com/winter-xgames-2012"><img src="assets/img/projects/full-espn-01.jpg" alt="ESPN website screenshot"></a>
 				</figure>
 
-			<a class="secret-page-corner"></a>
-
 		</div>
 
-
+		{{> partials/footer }}
 
 	</div>
 
