--- a/_source/templates/pages/projects.mustache
+++ b/_source/templates/pages/projects.mustache
@@ -19,83 +19,16 @@
 		<div class="content">
 
 				<h2>Projects</h2>
-				<p>This page contains some recent examples of project work. Please note that due to privacy agreements, not all of my work might be listed here. If there's a specific skill you would like to see an example of, please <a href="contact.html">contact me</a>.</p>
+				<p>This page contains some recent examples of project work.</p>
+				<p>Please note that due to privacy agreements, not all of my work may be listed here. If there's a specific skill you would like to see an example of, please <a href="contact.html">contact me</a>.</p>
 				<br>
 
-			  	<div class="projects-container">
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<a href="project-espn.html"><img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image"></a>
-				  			</div>
-				  			<figcaption>
-				  				<h4>ESPN Event Wrap-Ups</h4>
-				  				<ul class="list-tags" style="display: none">
-				  					<li>HTML</li>
-				  					<li>CSS</li>
-				  					<li>jQuery</li>
-				  					<li>Expression Engine</li>
-				  				</ul>
-				  				<p>A series of websites for ESPN's annual events, including the X Games and the ESPYs Awards.</p>				  				
-				  				<p><a href="project-espn.html">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
-				  			</figcaption>
-				  		</figure>			  			
-			  		</div>
-
-<!--
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-hxr-01.jpg" alt="HXR website thumbnail image">				  				
-				  			</div>			  
-							<figcaption>
-				  				<h4>HXD Conference</h4>
-				  				<ul class="list-tags" style="display: none">
-				  					<li>HTML</li>
-				  					<li>CSS</li>
-				  					<li>Squarespace</li>
-				  				</ul>			  	
-				  				<p>Website for the annual Healthcare Experience Design (HXR) Conference.</p>			  								  				
-				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
-				  			</figcaption>
-				  		</figure>			  			
-			  		</div>
-
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-pearson-01.jpg" alt="Pearson website thumbnail image">				  				
-				  			</div>
-				  			<figcaption>
-				  				<h4>Pearson Education</h4>
-				  				<p>Pearson's <em>MyLab Writing Space</em> a classroom tool for writing, grading, and grammar guidance.</p>
-				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  								  				
-				  			</figcaption>
-				  		</figure>			  			
-			  		</div>
-
-			  		<div class="project">
-				  		<figure>
-				  			<div class="img-container">
-				  				<img src="assets/img/projects/tb-perfecthealth-01.jpg" alt="Perfect Health website thumbnail image">				  				
-				  			</div>			  
-							<figcaption>
-				  				<h4>Perfect Health</h4>
-				  				<p>Website for a startup company bringing empathy and warmth to the personal healthcare experience.</p>
-				  				<p><a href="#">Project Details<span class="fa fa-arrow-circle-right"></span></a></p>			  				
-				  			</figcaption>
-				  		</figure>				  			
-			  		</div>
-			  		-->			  					  					  					  					  	
-			  	</div>	
-
-			<a class="secret-page-corner"></a>
+			  	{{> partials/projects }}	
 
 		</div>
 
-
-
+		{{> partials/footer }}
+		
 	</div>
-
 </body>
 </html>
