--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -146,14 +146,10 @@
 					<p>UXPA Boston 2013, presented with Nick Snyder</p>
 					<p><a href="http://www.slideshare.net/AnnetteArabasz/uxpa-boston-2013-responsive-web-design-mad-pow"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>						
 				</section>			
-
 			</section>			
-
-			<a class="secret-page-corner"></a>
-
 		</div>
 
-
+		{{> partials/footer }}
 
 	</div>
 
