--- a/_source/templates/partials/nav.mustache
+++ b/_source/templates/partials/nav.mustache
@@ -1,8 +1,8 @@
 <nav>
 	<ul class="links">
 		<li><a href="index.html"><span class="circle fa fa-angle-right"></span>Home</a></li>					
-		<li><a href="skills.html"><span class="circle fa fa-angle-right"></span>Resume</a></li>
 		<li><a href="projects.html"><span class="circle fa fa-angle-right"></span>Projects</a></li>
-		<li><a href="contact.html"><span class="circle fa fa-angle-right"></span>Contact</a></li>
+		<li><a href="resume.html"><span class="circle fa fa-angle-right"></span>Résumé</a></li>
+		<li><a href="connect.html"><span class="circle fa fa-angle-right"></span>Connect</a></li>
 	</ul>
 </nav>
