Adding resume and experience details

--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -22,7 +22,7 @@
 				<h2>About Me</h2>
 			  	<p>My name is Annette Arabasz and I am a Front End Developer in Boston. My background is in visual design, so I love projects where I can dig into aesthetics and usability. I currently work at <a href="http://madpow.com" target="_blank">Mad*Pow</a> as a managing director and developer.</p>
 			  	<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
-			  	<p>For details about my skills and experience, click <a href="#">here</a>.</p>
+			  	<p>For details about my skills and experience, click <a href="resume.html">here</a>.</p>
 			</section>
 
 			<section class="projects">
