--- a/_source/templates/pages/nitty-gritty.mustache
+++ b/_source/templates/pages/nitty-gritty.mustache
@@ -43,11 +43,11 @@
 				<div class="project">
 					<figure>
 						<div class="img-container">
-							<a href="http://arabasz.com/archive-03"><img src="assets/img/projects/tb-arabasz-01.jpg" alt="Old arabasz.com thumbnail image"></a>
+							<a href="http://arabasz.com/oldie-2016/index.php"><img src="assets/img/projects/tb-arabasz-01.jpg" alt="Old arabasz.com thumbnail image"></a>
 						</div>
 						<figcaption>
 							<h4>Online from 2010-2016</h4>			  				
-							<p><a href="project-espn.html">View archived site<span class="fa fa-arrow-circle-right"></span></a></p>			  				
+							<p><a href="http://arabasz.com/oldie-2016/index.php">View archived site<span class="fa fa-arrow-circle-right"></span></a></p>			  				
 						</figcaption>
 					</figure>			  			
 				</div>
