--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -21,7 +21,7 @@
 			<section class="skills">
 				<h2>Résumé</h2>
 				<p>Here you'll find a summary of my professional experience. You can also download my résumé in .PDF format using the link below.
-				<p><a href="#"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
+				<p><a href="assets/resume-arabasz-2016.pdf"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
 				<br>
 
 				<section class="skills-group work-experience">
