--- a/_source/templates/partials/html-head.mustache
+++ b/_source/templates/partials/html-head.mustache
@@ -23,6 +23,7 @@
 	<meta charset="UTF-8">
   	<meta name="description" content="">
   	<meta name="viewport" content="width=device-width, initial-scale=1">  
+  	<meta name="description" content="The portfolio website of Annette Arabasz, a Front End Developer and designer located in Boston, Massachusetts.">
   	
   	<title>Annette Arabasz  |  Front End Developer and Designer</title>
 
