Google tracking code added

--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -94,7 +94,7 @@
 									<li>Grunt, NPM</li>
 									<li>Mustache</li>
 									<li>Wordpress</li>
-									<li>Git, version controll</li>
+									<li>Git, version control</li>
 									<li>Responsive web design</li>					
 									<li>PHP (working knowledge)</li>					
 								</ul>								
@@ -117,6 +117,7 @@
 
 								<h4>Other Skills</h4>						
 								<ul class="list-skills">
+									<li>Certified Scrum Product Owner (2015)</li>
 									<li>Bilingual with fluency in Polish</li>
 								</ul>
 							</td>
@@ -130,7 +131,7 @@
 
 					<br>
 
-					<h4>BFA in Graphic Design and Letterform, Minor in Business</h4>
+					<h4>BFA in Graphic Design and Letterform, <br>Minor in Business</h4>
 					<p>University of Massachusetts Dartmouth | 2004-2007<p>			
 
 					<h4>Visual Communication Design</h4>
