--- a/_source/templates/partials/html-head.mustache
+++ b/_source/templates/partials/html-head.mustache
@@ -30,4 +30,16 @@
   	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
   	<link rel="stylesheet" href="assets/css/styles.css">
   	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Droid+Sans:400,700|Droid+Serif:400,700" rel="stylesheet">
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-7939066-2', 'auto');
+	  ga('send', 'pageview');
+
+	</script>  	
+	
 </head>
