--- a/_source/templates/pages/connect.mustache
+++ b/_source/templates/pages/connect.mustache
@@ -20,9 +20,9 @@
 
 			<section class="skills">
 				<h2>Connect</h2>
-				<p>Please reach out to me if you are interested in connecting professionally.</p>
+				<p>Please reach out to me if you are interested in connecting.</p>
 
-				<p><span class="fa fa-envelope icon-margin-right"></span>E-mail: <a href="#">fakeaddress@tbd.com</a>
+				<p><span class="fa fa-envelope icon-margin-right"></span>E-mail: <a href="mailto:annettea@gmail.com">annettea@gmail.com</a>
 				<br>
 				<span class="fa fa-github-alt icon-margin-right"></span>Github: <a href="https://github.com/anevaude">https://github.com/anevaude</a>
 				<br>				
