--- a/_source/templates/pages/projects.mustache
+++ b/_source/templates/pages/projects.mustache
@@ -25,6 +25,12 @@
 
 			  	{{> partials/projects }}	
 
+			  	<br>
+			  	<h2>Clients</h2>
+			  	<p>Below are some of the clients and brands I have worked with.</p>
+
+			  	{{> partials/clients }}
+
 		</div>
 
 		{{> partials/footer }}
