--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -112,12 +112,12 @@
 								<ul class="list-skills">
 									<li>UI wireframing and prototyping</li>
 									<li>Information architecture</li>
-									<li>Logos and brand identities</li>
+									<li>Logos and brand identity</li>
 								</ul>	
 
 								<h4>Other Skills</h4>						
 								<ul class="list-skills">
-									<li>Certified Scrum Product Owner (2015)</li>
+									<li>Certified Scrum Product Owner (Certified 2016)</li>
 									<li>Bilingual with fluency in Polish</li>
 								</ul>
 							</td>
