--- a/_source/assets/scss/structure.scss
+++ b/_source/assets/scss/structure.scss
@@ -118,6 +118,7 @@ nav {
 			color: #333;
 			display: block;
 			font-size: 1.25rem;
+			font-weight: 700;
 			line-height: 1.5rem;
 			margin-bottom: .75rem;
 			overflow: hidden;
@@ -224,10 +225,10 @@ nav {
 
 			a:hover,
 			a:active {
-				opacity: .8;
-			    transition: opacity .55s ease-in-out;
-			    -moz-transition: opacity .55s ease-in-out;
-			    -webkit-transition: opacity .55s ease-in-out;							
+				opacity: .66;
+			    transition: opacity .3s ease-in-out;
+			    -moz-transition: opacity .3s ease-in-out;
+			    -webkit-transition: opacity .3s ease-in-out;							
 			}
 
 			img {
@@ -262,6 +263,65 @@ nav {
 	img {
 		max-width: 100%;
 		vertical-align: middle;
+	}
+}
+
+.clients-container {
+	@include container(12);
+
+	.client {
+		display: block;
+		margin: 0 0 0.5rem;
+		padding: 0;	
+
+		@media (min-width: $large-screen) {
+			@include span(3 of 12);
+
+			&:nth-child(4n+4) {
+				clear: left;
+			}
+		}
+
+		figure {
+			margin: 0;
+
+			@media (min-width: $large-screen) {
+				margin-right: 12%;
+			}
+		}		
+
+		.img-container {
+			background: #fff;
+			border: 1px #ccc solid;	
+
+			@media (min-width: $large-screen) {
+				overflow: hidden;
+			}
+
+			a:hover,
+			a:active {
+				opacity: .66;
+			    transition: opacity .3s ease-in-out;
+			    -moz-transition: opacity .3s ease-in-out;
+			    -webkit-transition: opacity .3s ease-in-out;							
+			}
+
+			img {
+				vertical-align: middle;
+				width: 100%;
+			}
+		}
+
+		figcaption {
+			padding: .5rem .5rem .5rem;
+			text-align: center;
+
+			h4 {
+				font-size: .8rem;
+				margin-bottom: 0.5rem;
+				text-transform: none;
+			}
+		}
 	}
 }
 
